--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: 'Harvard University'
-    description: 'Personal academic website for Peter Aungle, PhD candidate in Psychology at Harvard University. Peter's primary advisor is Professor Ellen Langer. 
-    His research focuses on the psychology of mind-body effects on health, with a particular emphasis on embodied cognition, placebo effects, and attention.'
+    description: 'The personal website of Peter Aungle, graduate student in psychology at Harvard working with Ellen Langer.'
     twitter: 'peteraungle'
   analytics:
     google_analytics: ''
@@ -27,7 +26,7 @@ marketing:
     google_tag_manager: ''
     microsoft_clarity: ''
   verification:
-    google: 'TbVDlB70gx2OcZI-2XVrmfH4XXg3G_ukvpmOf9sw3n4'
+    google: ''
     baidu: ''
 
 # Site header
