--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: 'Harvard University'
-    description: 'The personal website of Peter Aungle, graduate student in psychology at Harvard working with Ellen Langer.'
+    description: 'Peter Aungle research profile: mind-body effects on health, with a particular emphasis on embodied cognition, the placebo effect, and the role of attention.'
     twitter: 'peteraungle'
   analytics:
     google_analytics: ''
