--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -26,7 +26,7 @@ marketing:
     google_tag_manager: ''
     microsoft_clarity: ''
   verification:
-    google: ''
+    google: 'TbVDlB70gx2OcZI-2XVrmfH4XXg3G_ukvpmOf9sw3n4'
     baidu: ''
 
 # Site header
